# oasys-take-home

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/: main.py
app/authz/: __init__.py  adapters.py  capabilities.py  context.py  exceptions.py  policy.py  ports.py
app/authz/tests/: conftest.py  test_adapters.py  test_capabilities.py  test_policy.py
app/care/: deps.py  orm.py  repository.py  router.py  schemas.py  service.py
app/care/domain/: clinical.py  episode.py  exceptions.py  repository.py  value_objects.py
app/care/tests/: conftest.py  test_clinical.py  test_deps.py  test_episode.py  test_exceptions.py  test_orm_mapping.py  test_schemas.py  test_service.py  test_value_objects.py
app/core/: config.py  database.py  deps.py  errors.py  exceptions.py  security.py
app/core/tests/: test_config.py  test_database.py  test_deps.py  test_security.py
app/demo/: demo.html  router.py
app/identity/: deps.py  orm.py  repository.py  router.py  schemas.py  service.py
app/identity/domain/: entities.py  exceptions.py  repository.py  value_objects.py
app/identity/tests/: conftest.py  test_domain.py  test_orm_mapping.py  test_schemas.py  test_service.py  test_value_objects.py
app/organization/: orm.py  repository.py  service.py
app/organization/domain/: entities.py  repository.py  value_objects.py
app/organization/tests/: conftest.py  test_entities.py  test_orm_mapping.py  test_service.py  test_value_objects.py
migrations/: env.py
migrations/versions/: 0001_extensions.py  0002_identities.py  0003_organizations.py  0004_profiles.py  0005_care.py  0006_clinical.py  0007_org_staff_period_check.py  0008_legacy_provider_backfill.py
planning/: auth-authz-design.md  care-team-design.md  data-model.md  decision-log.md  scenario-answers.md
scripts/: seed.py
tests/: _world.py  conftest.py  test_auth_api.py  test_backfill_episodes.py  test_care_api.py  test_care_repository.py  test_clinical_repository.py  test_demo.py  test_error_handlers.py  test_identity_repository.py  test_main.py  test_migrations.py  test_organization_repository.py  test_profile_directory_adapter.py  test_scenarios.py  test_seed.py
