[project]
name = "kinetic-backend"
version = "0.0.0"
description = "Kinetic — care-team backend (Oasys take-home)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18",
    "psycopg[binary]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.13",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.1",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
