[project]
name = "kinetic-backend"
version = "0.0.0"
description = "Kinetic care-team backend (Oasys take-home)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "email-validator>=2.2",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18",
    "psycopg[binary]>=3.3",
    "bcrypt>=5",
    "pyjwt>=2.13",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.1",
    "httpx>=0.28",
]

[tool.uv]
# greenlet is a SQLAlchemy x86_64-only transitive dependency, unused by our sync
# stack and not installed at all on arm64 (local). greenlet 3.5.3 ships no sdist
# and no CI-installable wheel, so constrain it to an installable version. With no
# committed uv.lock, CI resolves the latest deps each run, so this pin avoids a
# transient install break until a lockfile lands.
constraint-dependencies = ["greenlet!=3.5.3"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = ["app", "tests"]
# Per-domain unit tests live in app/<context>/tests/ (TDD); cross-context
# scenario/integration tests live in the top-level tests/.
