[project]
name = "kinetic-backend"
version = "0.0.0"
description = "Kinetic care-team backend (Oasys take-home)"
requires-python = ">=3.14"
# Runtime and dev dependencies are pinned in requirements.txt (pip + a .venv).

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true
files = ["app", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = ["app", "tests"]
# Per-domain unit tests live in app/<context>/tests/ (TDD); cross-context
# scenario/integration tests live in the top-level tests/.
